Adding Export and Citations abilities
